<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="boxe_one">Boxe One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="clear">Clear</string>
    <string name="how_to_play">How To Play</string>
    <string name="click_on_screen">Click on Screen or Button</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>